@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-05T00:44:00Z",
+  "timestamp" : "2022-09-05T16:08:33Z",
   "count_outdated" : 48,
   "uniques_outdated" : 18,
-  "count" : 60,
-  "uniques" : 24,
+  "count" : 61,
+  "uniques" : 25,
   "views" : [
     {
       "timestamp": "2022-08-24T00:00:00Z",
@@ -44,6 +44,13 @@
       "timestamp": "2022-09-04T00:00:00Z",
       "count": 3,
       "count_minmax": [ 3, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
