@@ -1,3 +1,11 @@
+2022-09-05T16:08:33Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2994687645
+* notice: last 14d: unq all: 7 13
+* notice: prev accum: outdated-unq outdated-all / unq all: 18 48 / 24 60
+* notice: next accum: outdated-unq outdated-all / unq all: 18 48 / 25 61
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-05]
+
 2022-09-05T00:44:00Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2990153247
 * notice: last 14d: unq all: 6 12
